# GCTS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: graph.cpp  graph.h  graphBuilder.cpp  graphBuilder.h  main.cpp  patchHistory.cpp  patchHistory.h  synthesizer.cpp  synthesizer.h
